# rae-dev-model-training-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baby_gpt.toml  char_step1.toml  char_step1_long.toml  char_step1_owner.toml  char_step1_small.toml  example.toml  review.toml  smoke.toml  smoke_bpe.toml
data/: SOURCES.md
data/sample/: sample.py  sample.ts
data/scripts/: prep_corpus.py  pretrain_bpe.py  sources-owner-only.toml  sources.toml  tokens_per_kb.py
data/tokenizers/: bpe_4096.json
docs/: ARCHITECTURE.md  DECISIONS.md  MILESTONES.md  REBUILD.md  RUNBOOK.md  SETUP.md  baseline-eval.md  results.md  tokenizer-comparison.md
eval/: eval_set.toml
src/codereview/: __main__.py  backend.py  bpe_tokenizer.py  config.py  corpus_prep.py  data.py  eval.py  log.py  model.py  review.py  sample.py  tokenizer.py  tokenizer_factory.py  train.py
tests/: test_backend.py  test_bpe_tokenizer.py  test_config.py  test_corpus_prep.py  test_data.py  test_eval.py  test_model.py  test_review.py  test_review_schema.py  test_sample.py  test_smoke.py  test_tokenizer.py  test_tokenizer_factory.py  test_train.py
