[project]
name = "rae-model-training-research"
version = "0.1.0"
description = "Learning project: build, train, and fine-tune a small code-review language model"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codereview"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
