[project]
name = "rae-model-training-research"
version = "0.1.0"
description = "Learning project: build, train, and fine-tune a small code-review language model"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "tensorboard>=2.18",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codereview"]

# CPU-only PyTorch wheel for the build plane (ADR-014: the workhorse uses
# a SEPARATE lockfile pinning the cu126 line; this main lockfile stays CPU
# so CI and rae-dev-command don't pull NVIDIA wheels).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
